--- a/views/drinks_show.ejs
+++ b/views/drinks_show.ejs
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drinks Show</title>
+    <title>Drinks</title>
 </head>
+<style>
+    body {
+        color: blanchedalmond;
+        background-color: steelblue;
+    }
+</style>
 <body>
-    The <%=drink.name; %> is  <%=drink.id; %>.
-
+    <h1>At foo bar</h1>
+    <h2><%=drink.name[0].toUpperCase()+ drink.name.substring(1) %></h2>
+    <a href="<%=drink.image.replace('.jpg', '.png') %>"><%=drink.image.replace('.jpg', '.png') %></a>
+    <h3><%=drink.price %></h3>
+    <a href="/drinks/"></a>
 </body>
 </html>
