--- a/views/food_show.ejs
+++ b/views/food_show.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drinks</title>
+    <title>Food</title>
 </head>
 <style>
     body {
@@ -14,9 +14,9 @@
 </style>
 <body>
     <h1>At foo bar</h1>
-    <h2><%=drink.name[0].toUpperCase()+ drink.name.substring(1) %></h2>
-    <img src="<%=drink.image.replace('.jpg', '.png') %>">
-    <h3><%=drink.price %></h3>
-    <a href="/drinks/">Back</a>
+    <h2><%=food.name[0].toUpperCase()+ food.name.substring(1) %></h2>
+    <img src="<%=food.image.replace('.jpg', '.png') %>">
+    <h3><%=food.price %></h3>
+    <a href="/food/">Back</a>
 </body>
 </html>
